<resources>
    <!-- App Name -->
    <string name="app_name">Android SQLite CRUD</string>

    <!-- Header Label -->
    <string name="add_person">Add Person</string>
    <string name="edit_person">Edit Person</string>

    <!-- Menu Label -->
    <string name="search">Search</string>

    <!-- EditText Hint -->
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_salary">Salary</string>

    <!-- Button Label -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- ImageView Content Description -->
    <string name="image_view_content_description">No Data Found</string>

    <!-- Person List Row Label -->
    <string name="name">Name:\u0020</string>
    <string name="age">Age:\u0020</string>
    <string name="phone">Phone:\u0020</string>
    <string name="email">Email:\u0020</string>
    <string name="address">Address:\u0020</string>
    <string name="salary">Salary:\u0020</string>
</resources>
